--- a/public/styles/old-tweet.css
+++ b/public/styles/old-tweet.css
@@ -40,9 +40,10 @@
 
 .old-tweet .contents {
     width : 100%;
-    padding : 30px 10px;
+    padding : 20px 10px;
     border-bottom : 1px solid grey;
     display : block;
+    overflow-wrap : break-word;
 }
 
 .old-tweet footer {
